# password-manager

./: .gitignore  README.md  cli.py  database.py  gui.py  pyproject.toml
password_manager/: database.py  models.py  password_manager.py
test/: test_cli.py
